<resources>
    <string name="app_name">NewsApp</string>
    <string name="no_articles">No news/articles available found, please come back later and try again!</string>
    <string name="no_internet_connection">No internet connection, try again.</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">NewsApp Settings</string>

    <string name="settings_numbers_of_article">Numbers of articles</string>
    <string name="settings_min_numbers_of_article_key" translatable="false">5</string>
    <string name="settings_min_numbers_of_article_default" translatable="false">15</string>

    <string name="settings_business_label">business</string>
    <string name="settings_business_value" translatable="false">business</string>
    <string name="settings_football_label">football</string>
    <string name="settings_football_value" translatable="false">football</string>
    <string name="settings_science_label">science</string>
    <string name="settings_science_value" translatable="false">science</string>
    <string name="settings_technology_label">technology</string>
    <string name="settings_technology_value" translatable="false">technology</string>

    <!-- for section preferences -->
    <string name="settings_section_label">Category</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">football</string>

</resources>
